增加了输赢判断

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 	<canvas id="canvas" width="600" height="600"></canvas>
+	<img id="sucai" style="display: none" src="imgs/qizi.png" alt="">
 </body>
 </html>
